--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
     </div>
         <br>
     <input type="button" value="搜索(默认)" onclick="jump_baidu()" style="background-color: dodgerblue; font-size: 20px;border-radius: 13px"title="按下回车即可搜索">
-    <input type="button" value="CSDN搜索(+1)" onclick="jump_CSDN()" style="background-color: orange; font-size: 20px;border-radius: 13px"/>
-    <input type="button" value="哔哩哔哩(+2)" onclick="jump_bilibili()" style="background-color: coral; font-size: 20px;border-radius: 13px"/><br>
-    <input type="button" value="知乎(+3)" onclick="jump_fanyi_en_ch()" style="font-size: 20px;border-radius: 13px"/>
+    <input type="button" value="CSDN搜索(+1)" onclick="jump_CSDN()" style="background-color: #FC5633; font-size: 20px;border-radius: 13px"/>
+    <input type="button" value="哔哩哔哩(+2)" onclick="jump_bilibili()" style="background-color: #FB7299; font-size: 20px;border-radius: 13px"/><br>
+    <input type="button" value="知乎(+3)" onclick="jump_fanyi_en_ch()" style="background-color: #1772F6;font-size: 20px;border-radius: 13px"/>
     <input type="button" value="谷歌搜索(+4)" onclick="jump_fanyi_en_ch()" style="font-size: 20px;border-radius: 13px"/>
-    <input type="button" value="稀土掘金(+5)" onclick="jump_fanyi_en_ch()" style="background-color: rgb(195, 241, 29);font-size: 20px;border-radius: 13px"/>
+    <input type="button" value="稀土掘金(+5)" onclick="jump_fanyi_en_ch()" style="background-color: #1E80FF;font-size: 20px;border-radius: 13px"/>
     <button onclick="jump_myTranslate()" style="font-size: 20px;border-radius: 13px">我的翻译</button>
     <hr>
 
