--- a/index.html
+++ b/index.html
@@ -298,6 +298,10 @@
             'name':'抖音',
             'url':'https://www.douyin.com/'
         },
+        {
+            'name':'Youtube',
+            'url':'https://www.youtube.com/'
+        },
     ];
     const site_array3 = [
         {
