--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@
         {
             'name':'谷歌学术镜像',
             'url':'http://xs.3822808.com/'
-        }
+        },
+        {
+            'name':'智谱清言',
+            'url':'https://chatglm.cn/main/alltoolsdetail'
+        },
     ];
     const site_array2 = [
         {
