--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
             'name':'智谱清言',
             'url':'https://chatglm.cn/main/alltoolsdetail'
         },
+        {
+            'name':'Gitee',
+            'url':'https://gitee.com/'
+        },
     ];
     const site_array2 = [
         {
@@ -305,6 +309,10 @@
         {
             'name':'Youtube',
             'url':'https://www.youtube.com/'
+        },
+        {
+            'name':'闲鱼',
+            'url':'https://www.goofish.com/'
         },
     ];
     const site_array3 = [
