--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         },
         {
             'name':'BTnull无名小站',
-            'url':'https://www.btnull.org/'
+            'url':'https://www.gying.in/'
         },
         {
             'name':'茶杯狐',
