框增加圆角

--- a/myTranslate.html
+++ b/myTranslate.html
@@ -78,6 +78,7 @@
             width: 13%; 
             height: 250px;
             border: 2px dashed #007bff;
+            border-radius: 20px;
             display: flex;
             float: left;
             justify-content: center;
