--- a/myTranslate.html
+++ b/myTranslate.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="image/translate-page.ico" type="image/x-icon">
     <script src="utils/vue.js"></script>
     <script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="utils/md5.js"></script>
