--- a/quantum-decision.html
+++ b/quantum-decision.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="image/quantum-page.ico" type="image/x-icon">
     <script src="utils/vue.js"></script>
     <title>赛博掷茭杯</title>
     <style>
