--- a/index.html
+++ b/index.html
@@ -271,6 +271,10 @@
             'name':'Gitee',
             'url':'https://gitee.com/'
         },
+        {
+            'name':'Overleaf',
+            'url':'https://www.overleaf.com/project'
+        },
     ];
     const site_array2 = [
         {
@@ -444,9 +448,14 @@
         {
             'name':'赛博掷茭杯',
             'url':'quantum-decision.html'
-        },{
+        },
+        {
             'name':'通义AI画图',
             'url':'https://tongyi.aliyun.com/wanxiang/creation'
+        },
+        {
+            'name':'BOSS直聘',
+            'url':'https://www.zhipin.com/'
         }
     ];
     renderButtons(site_array1, numPerLine);
