--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <br>
     <div class="main_search">
         <h2>搜索</h2>
-        <input id="wd" style="font-size: 23px;border-radius: 6px;" size="38" placeholder=" 🔍"/>
+        <input id="wd" style="font-size: 23px;border-radius: 6px;" size="38" placeholder=" 🔍" autocomplete="off"/>
         <img src="image/chachacha.png" width="28px" height="28px" style="margin-bottom: -5px" onclick="fun_chachacha()" title="清除"/>
     </div>
         <br>
