--- a/index.html
+++ b/index.html
@@ -176,12 +176,13 @@
 
 <script>
     // var chuansongmen = document.getElementById("chuansongmen");
+    // https://vip.helloimg.com/i/2024/04/07/66126f84e5641.jpg
     const now = new Date();
     const bg_images = [
-        "https://vip.helloimg.com/i/2024/04/07/6612617a73ab0.jpg",
-        "https://vip.helloimg.com/i/2024/04/07/66126f84e5641.jpg",
-        "https://vip.helloimg.com/i/2024/04/25/662a1fdda9df6.jpg",
-        "https://vip.helloimg.com/i/2024/04/07/66126c368de86.png",
+        "https://raw.githubusercontent.com/George551556/graph-bed/main/image/mountain-pink.jpg",
+        "https://raw.githubusercontent.com/George551556/graph-bed/main/image/snow-tree.jpg",
+        "https://raw.githubusercontent.com/George551556/graph-bed/main/image/mountain-pink.jpg",
+        "https://raw.githubusercontent.com/George551556/graph-bed/main/image/snow-tree.jpg",
     ];
     const numPerLine = 7;
 
@@ -353,7 +354,7 @@
         },
         {
             'name':'音乐下载',
-            'url':'https://tool.liumingye.cn/music/#/'
+            'url':'https://www.gequbao.com/'
         },
         {
             'name':'多人视频',
